feat: 学生印象绑定 + 深圳本地化专属教案生成
- Student 增加 impressions 字段及 DDL（init_ai_teacher_tables.sql / ai_teacher_ddl.sql）

- 新增 LessonPlan 确定性接口（DTO + Controller/Service），支持按 studentId 或 studentName+grade 回退生成四段式教案

- 修复 KnowledgeSearchClient Java8 不兼容（isBlank / URLEncoder 等 Java11 API）

- 移除 mario-game 演示模块